# ai-quant

./: .env  .gitignore  .pre-commit-config.yaml  BLACK_THEME_UPDATE.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOG_LOCATIONS.md  QUICK_START.md  README.md  README_OPTIMIZED.md  SECURITY_AND_FUNCTIONALITY_IMPROVEMENTS.md  SYSTEM_SUMMARY.md  UI_UPDATE_SUMMARY.md  app.py  artifact_logger.py  backtester.py  baseline_models.py  black_theme_demo.py  calibration.py  config.py  config_optimized.py  data_loader.py  demo.py  env_example.txt  env_manager.py  featurizer.py  llm_advisor.py  localization.py  main.py  models.py  performance_monitor.py  predictor.py  pyproject.toml  pytest.ini  requirements.txt  requirements_optimized.txt  run.py  setup.py  setup_optimized.py  (+2 more)
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
data_cache/: PTT.BK_2005-09-19_2025-09-14_1d.parquet  PTT.BK_2005-09-20_2025-09-15_1d.parquet  PTT.BK_2024-01-01_2024-12-31_1d.parquet
model_logs/: model_selection_20250915_212513.json
tests/: test_data_loader.py  test_featurizer.py  test_optimized.py  test_security_and_functionality.py
